fix(webserver): add API routes and handle 204 responses in Caddy/nginx

--- a/.devcontainer/conf/nginx.conf
+++ b/.devcontainer/conf/nginx.conf
@@ -3,14 +3,81 @@ server {
     root /app;
     index index.php index.html;
 
-    # Static assets (caching)
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires max;
-        log_not_found off;
-        access_log off;
+    # API URL rewrite rules for RESTful endpoints
+    # Note: Using $args to preserve query string parameters (e.g., p=2&per_page=50)
+    location = /api {
+        rewrite ^ /index.php?page=api&$args last;
     }
 
-    # API handling with CORS
+    location = /api/v1 {
+        rewrite ^ /index.php?page=api/v1&$args last;
+    }
+
+    # RESTful API routes
+    # User verification endpoint
+    location = /api/v1/user/verify {
+        rewrite ^ /index.php?page=api/v1/user_verify&$args last;
+    }
+
+    # Users individual user routes (must come before collection route)
+    location ~ ^/api/v1/users/([0-9]+)/?$ {
+        rewrite ^/api/v1/users/([0-9]+)/?$ /index.php?page=api/v1/users/$1&$args last;
+    }
+
+    # Users collection route
+    location ~ ^/api/v1/users/?$ {
+        rewrite ^ /index.php?page=api/v1/users&$args last;
+    }
+
+    # Zones individual zone routes (must come before collection route)
+    location ~ ^/api/v1/zones/([0-9]+)/?$ {
+        rewrite ^/api/v1/zones/([0-9]+)/?$ /index.php?page=api/v1/zones/$1&$args last;
+    }
+
+    # Zones collection route
+    location ~ ^/api/v1/zones/?$ {
+        rewrite ^ /index.php?page=api/v1/zones&$args last;
+    }
+
+    # Zone records individual record routes
+    location ~ ^/api/v1/zones/([0-9]+)/records/([0-9]+)/?$ {
+        rewrite ^/api/v1/zones/([0-9]+)/records/([0-9]+)/?$ /index.php?page=api/v1/zones_records/$1/$2&$args last;
+    }
+
+    # Zone records collection routes
+    location ~ ^/api/v1/zones/([0-9]+)/records/?$ {
+        rewrite ^/api/v1/zones/([0-9]+)/records/?$ /index.php?page=api/v1/zones_records/$1&$args last;
+    }
+
+    # Permission templates routes
+    location ~ ^/api/v1/permission_templates/([0-9]+)/?$ {
+        rewrite ^/api/v1/permission_templates/([0-9]+)/?$ /index.php?page=api/v1/permission_templates/$1&$args last;
+    }
+
+    location ~ ^/api/v1/permission_templates/?$ {
+        rewrite ^ /index.php?page=api/v1/permission_templates&$args last;
+    }
+
+    # Permissions individual routes (returns 405 as no individual ops supported)
+    location ~ ^/api/v1/permissions/([0-9]+)/?$ {
+        rewrite ^/api/v1/permissions/([0-9]+)/?$ /index.php?page=api/v1/permissions/$1&$args last;
+    }
+
+    # Permissions collection route
+    location ~ ^/api/v1/permissions/?$ {
+        rewrite ^ /index.php?page=api/v1/permissions&$args last;
+    }
+
+    # API docs specific rewrite rules
+    location = /api/docs/json {
+        rewrite ^ /index.php?page=api/docs/json&$args last;
+    }
+
+    location = /api/docs {
+        rewrite ^ /index.php?page=api/docs&$args last;
+    }
+
+    # General API handling with CORS (fallback)
     location ~ ^/api {
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
@@ -25,9 +92,20 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # Clean URL routing - let Symfony Router handle all routing
+    # Static assets (caching)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires max;
+        log_not_found off;
+        access_log off;
+    }
+
+    # Standard routing - use named location to strip leading slash from page parameter
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ @router;
+    }
+
+    location @router {
+        rewrite ^/(.*)$ /index.php?page=$1&$args last;
     }
 
     # Handle PHP files
@@ -37,6 +115,9 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_read_timeout 180;
         include fastcgi_params;
+
+        # Ensure HTTP Authorization header is forwarded for API authentication
+        fastcgi_param HTTP_AUTHORIZATION $http_authorization;
     }
 
     rewrite_log on;
