--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "test:e2e:report": "playwright show-report",
     "test:e2e:mysql": "BASE_URL=http://localhost:8080 playwright test --project=chromium",
     "test:e2e:pgsql": "BASE_URL=http://localhost:8081 playwright test --project=chromium",
-    "test:e2e:sqlite": "BASE_URL=http://localhost:8082 playwright test --project=chromium"
+    "test:e2e:sqlite": "BASE_URL=http://localhost:8082 playwright test --project=chromium",
+    "test:api": "cd tests/api && ./run-tests.sh --db mysql test all",
+    "test:api:mysql": "cd tests/api && ./run-tests.sh --db mysql test all",
+    "test:api:pgsql": "cd tests/api && ./run-tests.sh --db pgsql test all",
+    "test:api:sqlite": "cd tests/api && ./run-tests.sh --db sqlite test all",
+    "test:api:all-dbs": "cd tests/api && ./run-tests.sh test:all-dbs"
   },
   "keywords": [],
   "author": "",
