fix(deps): allow composer-patches plugin required by phan 6.x

--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,9 @@
   "config": {
     "platform": {
       "php": "8.1"
+    },
+    "allow-plugins": {
+      "cweagans/composer-patches": true
     }
   },
   "archive": {
