--- a/.htaccess
+++ b/.htaccess
@@ -11,36 +11,10 @@
     RewriteCond %{REQUEST_FILENAME} -d
     RewriteRule ^ - [L]
 
-    # API Documentation specific rewrite rules
-    RewriteRule ^api/docs/json$ index.php?page=api/docs/json [QSA,L]
-    RewriteRule ^api/docs$ index.php?page=api/docs [QSA,L]
-
-    # RESTful API routes
-    # User verification endpoint
-    RewriteRule ^api/v1/user/verify$ index.php?page=api/v1/user_verify [QSA,L]
-
-    # Users individual user routes (must come before collection route)
-    RewriteRule ^api/v1/users/([0-9]+)/?$ index.php?page=api/v1/users/$1 [QSA,L]
-    
-    # Users collection route
-    RewriteRule ^api/v1/users/?$ index.php?page=api/v1/users [QSA,L]
-
-    # Zones individual zone routes (must come before collection route)
-    RewriteRule ^api/v1/zones/([0-9]+)/?$ index.php?page=api/v1/zones/$1 [QSA,L]
-    
-    # Zones collection route
-    RewriteRule ^api/v1/zones/?$ index.php?page=api/v1/zones [QSA,L]
-
-    # Zone records individual record routes
-    RewriteRule ^api/v1/zones/([0-9]+)/records/([0-9]+)/?$ index.php?page=api/v1/zones_records/$1/$2 [QSA,L]
-    
-    # Zone records collection routes
-    RewriteRule ^api/v1/zones/([0-9]+)/records/?$ index.php?page=api/v1/zones_records/$1 [QSA,L]
-
-    # Rewrite API base paths (fallback)
+    # Route all /api/* requests to index.php (PHP router handles path parsing)
     RewriteRule ^api(/(.*))?$ index.php?page=api/$2 [QSA,L]
 
-    # Handle general page routing if not caught by API rules
+    # Handle general page routing
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?page=$1 [QSA,L]
