--- a/cliff.toml
+++ b/cliff.toml
@@ -71,6 +71,12 @@ commit_parsers = [
     { message = "\\(renovate\\)", skip = true },
     { message = "\\(tests\\)", skip = true },
     { message = "\\(build\\)", skip = true },
+    # Skip internal changes not relevant to users
+    { message = "^feat\\(deps\\)", skip = true },
+    { message = "^fix\\(caddy\\)", skip = true },
+    { message = "^fix\\(test\\)", skip = true },
+    { message = "^fix\\(webserver\\)", skip = true },
+    { message = "^refactor\\(config\\)", skip = true },
     # Main commit types
     { message = "^feat", group = "1-✨ Features" },
     { message = "^fix", group = "2-🐛 Bug Fixes" },
