chore(devcontainer): bump PostgreSQL, PowerDNS, Debian and fix deprecated compose version

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -22,7 +22,7 @@ MYSQL_VERSION=10.11
 
 # PostgreSQL
 PGSQL_IMAGE=postgres
-PGSQL_VERSION=16.3
+PGSQL_VERSION=16.11
 
 #PHP_VERSION=8
 #PHP_VERSION=8.4
@@ -30,7 +30,7 @@ PGSQL_VERSION=16.3
 PHP_VERSION=8.2
 #PHP_VERSION=8.1
 #DEBIAN_VERSION=bookworm
-DEBIAN_VERSION=bullseye
+DEBIAN_VERSION=bookworm
 #DEBIAN_VERSION=buster
 
 #PDNS_BRANCH=45
@@ -46,7 +46,7 @@ DEBIAN_VERSION=bullseye
 #PDNS_VERSION=4.8.5
 
 PDNS_BRANCH=49
-PDNS_VERSION=4.9.8
+PDNS_VERSION=4.9.12
 
 #PDNS_BRANCH=50
 #PDNS_VERSION=5.0.0
