--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,8 @@
   "baseBranchPatterns": [
     "master",
     "release/3.x",
-    "release/4.x"
+    "release/4.x",
+    "release/4.1.x"
   ],
   "constraints": {
     "php": ">=8.1 <8.2"
