--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     "twig/twig": "^3.21.1",
     "pragmarx/google2fa": "^8.0.3",
     "bacon/bacon-qr-code": "^3.0.1",
-    "zircote/swagger-php": "^5.4.2",
+    "zircote/swagger-php": "^5.7.8",
     "league/oauth2-client": "^2.8",
     "onelogin/php-saml": "^4.2",
     "symfony/security-bundle": "^6.4.26",
@@ -66,22 +66,18 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.5",
+    "phpunit/phpunit": "^10.5.62",
     "squizlabs/php_codesniffer": "^3.13",
     "phpstan/phpstan": "^2.1",
     "friendsofphp/php-cs-fixer": "^v3.89",
     "vimeo/psalm": "^5.26",
     "phpmd/phpmd": "^2.15",
-    "phan/phan": "^5.5"
+    "phan/phan": "^6.0"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
-    "docs:api:v1:json": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi-v1.json",
-    "docs:api:v1:yaml": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi-v1.yaml --format yaml",
-    "docs:api:v2:json": "vendor/bin/openapi lib/Application/Controller/Api/V2/ --output docs/openapi-v2.json",
-    "docs:api:v2:yaml": "vendor/bin/openapi lib/Application/Controller/Api/V2/ --output docs/openapi-v2.yaml --format yaml",
-    "docs:api:json": ["@docs:api:v1:json", "@docs:api:v2:json"],
-    "docs:api:yaml": ["@docs:api:v1:yaml", "@docs:api:v2:yaml"],
+    "docs:api:json": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi.json",
+    "docs:api:yaml": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi.yaml --format yaml",
     "docs:api": ["@docs:api:json", "@docs:api:yaml"],
 
     "tests": "phpunit --testsuite unit",
@@ -105,11 +101,13 @@
     "compat:8.2": "phan --target-php-version=8.2 --allow-polyfill-parser",
     "compat:8.3": "phan --target-php-version=8.3 --allow-polyfill-parser",
     "compat:8.4": "phan --target-php-version=8.4 --allow-polyfill-parser",
+    "compat:8.5": "phan --target-php-version=8.5 --allow-polyfill-parser",
     "compat:all": [
         "@compat:8.1",
         "@compat:8.2",
         "@compat:8.3",
-        "@compat:8.4"
+        "@compat:8.4",
+        "@compat:8.5"
     ],
 
     "post-create-project-cmd": [
@@ -120,6 +118,9 @@
   "config": {
     "platform": {
       "php": "8.1"
+    },
+    "allow-plugins": {
+      "cweagans/composer-patches": true
     }
   },
   "archive": {
