--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,13 +8,23 @@ on:
     branches:
       - master
       - develop
+      - release/3.x
+      - release/4.x
+      - release/4.1.x
   push:
     tags:
       - 'v*'
+    branches:
+      - release/3.x
+      - release/4.x
+      - release/4.1.x
   pull_request:
     branches:
       - master
       - develop
+      - release/3.x
+      - release/4.x
+      - release/4.1.x
   workflow_dispatch:
 
 concurrency:
@@ -83,6 +93,9 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest,enable=${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'master') || (github.event_name != 'workflow_run' && github.ref == 'refs/heads/master') }}
             type=raw,value=dev,enable=${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'develop') || (github.event_name != 'workflow_run' && github.ref == 'refs/heads/develop') }}
+            type=raw,value=lts,enable=${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'release/3.x') || (github.event_name != 'workflow_run' && github.ref == 'refs/heads/release/3.x') }}
+            type=raw,value=stable,enable=${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'release/4.x') || (github.event_name != 'workflow_run' && github.ref == 'refs/heads/release/4.x') }}
+            type=raw,value=next,enable=${{ (github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'release/4.1.x') || (github.event_name != 'workflow_run' && github.ref == 'refs/heads/release/4.1.x') }}
 
       - name: Build and push
         id: build
@@ -113,7 +126,7 @@ jobs:
 
       - name: Generate SBOM
         if: github.event_name != 'pull_request' && success()
-        uses: anchore/sbom-action@v0.20.10
+        uses: anchore/sbom-action@v0.22.2
         with:
           image: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
           format: spdx-json
@@ -121,7 +134,7 @@ jobs:
 
       - name: Upload SBOM as artifact
         if: github.event_name != 'pull_request' && success()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@v6
         with:
           name: sbom-${{ github.run_id }}
           path: sbom.spdx.json
