--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,12 @@
   "extends": [
     "config:recommended"
   ],
+  "baseBranchPatterns": [
+    "master",
+    "release/3.x",
+    "release/4.x",
+    "release/4.1.x"
+  ],
   "constraints": {
     "php": ">=8.1 <8.2"
   },
