--- a/composer.json
+++ b/composer.json
@@ -98,10 +98,11 @@
         "@lint:twig"
     ],
 
-    "compat:8.2": "phan --target-php-version=8.2 --allow-polyfill-parser",
-    "compat:8.3": "phan --target-php-version=8.3 --allow-polyfill-parser",
-    "compat:8.4": "phan --target-php-version=8.4 --allow-polyfill-parser",
-    "compat:8.5": "phan --target-php-version=8.5 --allow-polyfill-parser",
+    "phan:install": "test -f .phan/phan.phar || curl -sL -o .phan/phan.phar https://github.com/phan/phan/releases/download/6.0.1/phan.phar",
+    "compat:8.2": ["@phan:install", "php .phan/phan.phar --target-php-version=8.2 --allow-polyfill-parser"],
+    "compat:8.3": ["@phan:install", "php .phan/phan.phar --target-php-version=8.3 --allow-polyfill-parser"],
+    "compat:8.4": ["@phan:install", "php .phan/phan.phar --target-php-version=8.4 --allow-polyfill-parser"],
+    "compat:8.5": ["@phan:install", "php .phan/phan.phar --target-php-version=8.5 --allow-polyfill-parser"],
     "compat:all": [
         "@compat:8.2",
         "@compat:8.3",
