--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,8 @@
     "phpmd/phpmd": "^2.15"
   },
   "scripts": {
-    "docs": "tools/phpDocumentor",
+    "phpdoc:install": "test -f .phpdoc/phpDocumentor.phar || (mkdir -p .phpdoc && curl -sL -o .phpdoc/phpDocumentor.phar https://phpdoc.org/phpDocumentor.phar)",
+    "docs": ["@phpdoc:install", "php .phpdoc/phpDocumentor.phar"],
     "docs:api:json": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi.json",
     "docs:api:yaml": "vendor/bin/openapi lib/Application/Controller/Api/V1/ --output docs/openapi.yaml --format yaml",
     "docs:api": ["@docs:api:json", "@docs:api:yaml"],
@@ -128,10 +129,10 @@
       ".devcontainer",
       ".github",
       ".phan",
+      ".phpdoc",
       "playwright/",
       "install/",
       "tests",
-      "tools/",
       ".dockerignore",
       ".gitignore",
       ".hadolint.yaml",
