chore(ci): filter internal scopes from git-cliff release notes

--- a/cliff.toml
+++ b/cliff.toml
@@ -74,11 +74,28 @@ commit_parsers = [
     # Skip internal changes not relevant to users
     { message = "^feat\\(deps\\)", skip = true },
     { message = "^fix\\(deps\\)", skip = true },
+    { message = "^fix\\(compat\\)", skip = true },
     { message = "^fix\\(caddy\\)", skip = true },
     { message = "^fix\\(e2e\\)", skip = true },
+    { message = "^fix\\(lint\\)", skip = true },
     { message = "^fix\\(test\\)", skip = true },
     { message = "^fix\\(webserver\\)", skip = true },
+    { message = "^fix\\(controllers\\)", skip = true },
+    { message = "^fix\\(pdo\\)", skip = true },
+    { message = "^fix\\(psalm\\)", skip = true },
+    { message = "^fix\\(quality\\)", skip = true },
     { message = "^refactor\\(config\\)", skip = true },
+    { message = "^refactor\\(csrf\\)", skip = true },
+    { message = "^refactor\\(data\\)", skip = true },
+    { message = "^refactor\\(entities\\)", skip = true },
+    { message = "^refactor\\(model\\)", skip = true },
+    { message = "^refactor\\(proxy\\)", skip = true },
+    { message = "^refactor\\(sql\\)", skip = true },
+    { message = "^refactor\\(test\\)", skip = true },
+    { message = "^refactor\\(types\\)", skip = true },
+    # Skip non-standard commit types
+    { message = "^data", skip = true },
+    { message = "^security", skip = true },
     # Main commit types
     { message = "^feat", group = "1-✨ Features" },
     { message = "^fix", group = "2-🐛 Bug Fixes" },
