chore(deps): restrict stable branch to patch-only Renovate updates

--- a/renovate.json
+++ b/renovate.json
@@ -31,6 +31,17 @@
       ]
     },
     {
+      "description": "Only allow patch updates on stable branches",
+      "matchBaseBranches": [
+        "release/3.x"
+      ],
+      "matchUpdateTypes": [
+        "major",
+        "minor"
+      ],
+      "enabled": false
+    },
+    {
       "matchDatasources": [
         "docker"
       ],
