chore(ci): normalize emails and DNS scopes in git-cliff config

--- a/cliff.toml
+++ b/cliff.toml
@@ -70,6 +70,8 @@ commit_preprocessors = [
     { pattern = "\\(infra\\)", replace = "(infrastructure)" },
     { pattern = "\\(smtp\\)", replace = "(email)" },
     { pattern = "\\(mail\\)", replace = "(email)" },
+    { pattern = "\\(emails\\)", replace = "(email)" },
+    { pattern = "\\(DNS\\)", replace = "(dns)" },
 ]
 commit_parsers = [
     # Skip development/CI scopes from release notes
