fix(infra): remove bug/feature label auto-labeling from issue labeler

--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Label Dependency Dashboard
         if: github.event.issue.title == 'Dependency Dashboard'
         run: |
-          gh issue edit ${{ github.event.issue.number }} --remove-label bug,feature,auth,dns,ui,infra,i18n,security,api,ui-templates,installer,validation || true
+          gh issue edit ${{ github.event.issue.number }} --remove-label auth,dns,ui,infra,i18n,security,api,ui-templates,installer,validation || true
           gh issue edit ${{ github.event.issue.number }} --add-label dependencies
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -31,38 +31,3 @@ jobs:
           include-title: 1
           enable-versioned-regex: 0
 
-      - name: Apply issue type label and resolve conflicts
-        if: github.event.issue.title != 'Dependency Dashboard'
-        run: |
-          ISSUE_NUMBER=${{ github.event.issue.number }}
-
-          # Get title safely using GitHub CLI JSON output to prevent code injection
-          TITLE=$(gh issue view "$ISSUE_NUMBER" --json title -q '.title')
-
-          # Determine issue type from title prefix (set by issue templates)
-          if [[ "$TITLE" == \[Bug\]:* ]]; then
-            # Bug report - ensure bug label, remove feature if present
-            gh issue edit "$ISSUE_NUMBER" --add-label bug || true
-            gh issue edit "$ISSUE_NUMBER" --remove-label feature || true
-          elif [[ "$TITLE" == \[Feature\]:* ]]; then
-            # Feature request - ensure feature label, remove bug if present
-            gh issue edit "$ISSUE_NUMBER" --add-label feature || true
-            gh issue edit "$ISSUE_NUMBER" --remove-label bug || true
-          fi
-
-          # Get current labels
-          LABELS=$(gh issue view "$ISSUE_NUMBER" --json labels -q '.labels[].name' | tr '\n' ',')
-
-          # If both bug and feature are present (from keyword matching), keep only one based on title
-          if [[ "$LABELS" == *"bug"* ]] && [[ "$LABELS" == *"feature"* ]]; then
-            if [[ "$TITLE" == \[Bug\]:* ]]; then
-              gh issue edit "$ISSUE_NUMBER" --remove-label feature || true
-            elif [[ "$TITLE" == \[Feature\]:* ]]; then
-              gh issue edit "$ISSUE_NUMBER" --remove-label bug || true
-            else
-              # No template prefix - remove both, let maintainers decide
-              gh issue edit "$ISSUE_NUMBER" --remove-label bug,feature || true
-            fi
-          fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
